Port the TRS Client to Fabric 1.14.4 through 1.19.4
common is now plain Java 8 so it can be compiled into the Java 8 builds of 1.14-1.16.
Version differences stay behind Gfx, Mc, Packs and Keys.